# GameKiosk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.kiro/specs/overlay-fab-fix/: .config.kiro  bugfix.md  design.md  tasks.md
public/: fab.html  overlay.html
screenshots/: .gitkeep
src/: App.tsx  bugConditionExploration.test.ts  igdb.ts  imageCache.ts  preservationProperties.test.ts  styles.css  types.ts  useGamepad.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
