[package]
name = "gamekiosk"
version = "0.1.0"
edition = "2021"

[lib]
name = "gamekiosk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gilrs = "0.11"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync"] }
dirs = "5"
sysinfo = "0.32"
window-vibrancy = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_XboxController",
] }
